
[package]
name = "universal2"
version = "0.0.1"
description = "Build universal2 binaries, because cargo won't."
edition = "2021"
readme = "README.md"
homepage = "https://github.com/randomairborne/cargo-universal2"
repository = "https://github.com/randomairborne/cargo-universal2"
keywords = ["macos", "universal2"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
default-run = "universal2"
authors = [
    "valkyrie_pilot <valk@randomairborne.dev>",
]

[[bin]]
name = "universal2"
path = "src/bin/universal2.rs"

[[bin]]
name = "cargo-universal2"
path = "src/bin/cargo-universal2.rs"

[dependencies]
thiserror = "1"
cargo_metadata = "0.14"
console = "0.15"